# kwin-focustrack-effect

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DISTRO_KWIN_EFFECT_API_VERSION.md  README.md  ecm_uninstall.cmake
debian/: changelog  control  copyright
src/: CMakeLists.txt  FocusTrackConfig.kcfgc  FocusTrackEffect.cpp  FocusTrackEffect.h  FocusTrackShader.cpp  FocusTrackShader.h  metadata.json  options.kcfg  plugin.cpp
src/RESOURCE_FILES_autogen/: moc_predefs.h
src/kcm/: CMakeLists.txt  FocusTrackConfig.cpp  FocusTrackConfig.h  FocusTrackEffect.h  FocusTrackEffect.ui  FocusTrackKCM.cpp  FocusTrackKCM.h  FocusTrackKCM.ui  kwineffects_interface.cpp  kwineffects_interface.h  kwineffects_interface.moc  kwineffects_interface.moc_parameters  metadata.json  plugin.cpp  ui_FocusTrackKCM.h
src/kcm/kwin_colorcorrectionfilter_config_autogen/: moc_predefs.h
src/kcm/kwin_colorcorrectionfilter_config_autogen/EWIEGA46WW/: moc_FocusTrackKCM.cpp  moc_FocusTrackKCM.cpp.d
src/kcm/kwin_colorcorrectionfilter_config_autogen/include/: plugin.moc.d
src/kcm/kwin_focustrackfilter_config_autogen/: moc_predefs.h  mocs_compilation.cpp
src/kcm/kwin_focustrackfilter_config_autogen/EWIEGA46WW/: moc_FocusTrackKCM.cpp  moc_FocusTrackKCM.cpp.d
src/kwin4_effect_focustrack_autogen/: moc_predefs.h  mocs_compilation.cpp
src/kwin4_effect_focustrack_autogen/EWIEGA46WW/: moc_FocusTrackEffect.cpp  moc_FocusTrackEffect.cpp.d
src/kwin4_effect_focustrack_autogen/include/: plugin.moc  plugin.moc.d
src/qml/: frame.qml
src/shaders/: FocusFrame.frag  FocusFrame_core.frag
(+2 files in other folders)
